fix: fix header z-index

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,7 +1,7 @@
 .header {
   position: sticky;
-  top: 0;
-  z-index: 1;
+  top: -1px;
+  z-index: 10;
   width: 100%;
   background-color: #fff;
   box-shadow: 0 2px 7px -4px rgb(0 0 0 / 50%);
